crates/hpc-core/tests/compile-fail/api_kernel_on_empty.stderr
error[E0308]: mismatched types
 --> tests/compile-fail/api_kernel_on_empty.rs
  |
  |     let (_inflight, _ev) = q.enqueue_kernel(&k, buf);
  |                              --------------     ^^^ expected `DeviceBuffer<'_, '_, _, Ready>`, found `DeviceBuffer<'_, '_, u32, Empty>`
  |                              |
  |                              arguments to this method are incorrect
  |
  = note: expected struct `DeviceBuffer<'_, '_, _, hpc_core::Ready>`
             found struct `DeviceBuffer<'_, '_, u32, hpc_core::buffer::state::Empty>`
note: method defined here
 --> src/api.rs
  |
  |     pub fn enqueue_kernel<T>(
  |            ^^^^^^^^^^^^^^
